PR12773: Use abrt to download and install debuginfo

dwflpp.cxx
  In setup_user(), pass the session to setup_dwfl_user().

setupdwfl.cxx
  Added internal_find_debuginfo() and
  execute_abrt_action_install_debuginfo_to_abrt_cache() to call
  abrt to automatically download and install the needed debuginfo.

setupdwfl.h
  Added function declarations.

util.h
  Added hex_dump() to convert a binary string to a hex string.